objects/PatientLandingPageStatusValue__mdt/PatientLandingPageStatusValue__mdt.object-meta.xml
<CustomObject>
    <description>Meta data type to fetch Patient Treatment Milestone for patients-TCP list view table</description>
    <label>Patient Landing Page Status Value</label>
    <pluralLabel>Patient Landing Page Status Values</pluralLabel>
</CustomObject>