objects/PatientLandingPageStatusValue__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to store Active/Inactive value for Milestone Status field</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>