objects/PatientLandingPageStatusValue__mdt/fields/CarePlanStatus__c.field-meta.xml
<CustomField>
    <fullName>CarePlanStatus__c</fullName>
    <description>Custom field to store Care Plan Status of the patient</description>
    <label>Care Plan Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>