objects/PatientLandingPageStatusValue__mdt/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <description>Custom field to store Order Status of the patient</description>
    <label>Order Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>