objects/PatientLandingPageStatusValue__mdt/fields/PatientJourneyStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientJourneyStatus__c</fullName>
    <description>To display the patient status in the patient&apos;s highlight bar section- Patient journey screen</description>
    <label>Patient Journey Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>