objects/PatientLandingPageStatusValue__mdt/fields/PatientStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientStatus__c</fullName>
    <description>Custom field to store Patient Status of the patient</description>
    <label>Patient Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>