objects/PatientLandingPageStatusValue__mdt/fields/PatientTreatmentMilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>PatientTreatmentMilestoneStatus__c</fullName>
    <description>Custom field to store Patient Treatment Milestone Status of the patient</description>
    <label>Patient Treatment Milestone Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>